    * [HIVE-11462] - GenericUDFStruct should constant fold at compile time
    * [HIVE-11464] - lineage info missing if there are multiple outputs
    * [HIVE-11466] - HIVE-10166 generates more data on hive.log causing Jenkins to fill all the disk.
    * [HIVE-11468] - Vectorize: Struct IN() clauses
    * [HIVE-11469] - Update doc for InstanceCache to clearly define the contract on the SeedObject
    * [HIVE-11472] - ORC StringDirectTreeReader is thrashing the GC due to byte[] allocation per row
    * [HIVE-11473] - Upgrade Spark dependency to 1.5 [Spark Branch]
    * [HIVE-11476] - TypeInfoParser cannot handle column names with spaces in them
    * [HIVE-11490] - Lazily call ASTNode::toStringTree() after tree modification
    * [HIVE-11493] - Predicate with integer column equals double evaluates to false
    * [HIVE-11497] - Make sure --orcfiledump utility includes OrcRecordUpdate.AcidStats
    * [HIVE-11498] - HIVE Authorization v2 should not check permission for dummy entity
    * [HIVE-11499] - Datanucleus leaks classloaders when used using embedded metastore with HiveServer2 with UDFs
    * [HIVE-11501] - HiveConnection.readOnly always throws a "Method not supported" exception
    * [HIVE-11502] - Map side aggregation is extremely slow
    * [HIVE-11510] - Metatool updateLocation warning on views
    * [HIVE-11511] - Output the message of orcfiledump when ORC files are not specified
    * [HIVE-11517] - Vectorized auto_smb_mapjoin_14.q produces different results
    * [HIVE-11523] - org.apache.hadoop.hive.ql.io.orc.FileDump should handle errors
    * [HIVE-11540] - Too many delta files during Compaction - OOM
    * [HIVE-11541] - ORC: Split Strategy should depend on global file count, not per-partition
    * [HIVE-11542] - port fileId support on shims and splits from llap branch
    * [HIVE-11546] - Projected columns read size should be scaled to split size for ORC Splits
    * [HIVE-11549] - Hide Hive configuration from spark driver launching process